Fix scrollbar UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,4 +81,28 @@
 
 html {
   scroll-behavior: smooth;
+  
+    /* Width and style adjustments for scrollbar */
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: #75689c8b; /* Firefox */
+  
+    /* Hide scrollbar for Chrome, Safari, and Edge */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: thin; /* Chrome, Safari, and Edge */
+  
+    /* Customize scrollbar for Chrome, Safari, and Edge */
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+  
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+  
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background-color: #75689c8b;
+      border-radius: 10px;
+    }
 }
